# RpiDocs

./: README.md  gpio_control.py
misc/: gpio_control.py  mjpeg_server.py
python/: .gitignore  README.md  config.json  pyproject.toml  wiz_discover_and_effects.py
python/src/wiz_lights/: __main__.py  config.py  controls.py  network.py  ui.py
wiz/: .gitignore  README.md  pyproject.toml  wiz_discover_and_effects.py
wiz/src/wiz_lights/: __init__.py  colors.py  controls.py  ui.py
